Upload full Streamlit app and model files

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 };
 
                 // --- Make API Call ---
-                const apiUrl = 'http://127.0.0.1:8080/predict'; // UPDATE THIS URL
+                const apiUrl = 'https://test4-386510874784.asia-southeast1.run.app/predict'; // UPDATE THIS URL
 
                 try {
                     const response = await fetch(apiUrl, {
